# rollandbar_online_shop

./: .gitignore  README.md  manage.py  pyproject.toml  setup.cfg
frontend/: README.md  babel.config.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: BasketCreateOrder.vue  BasketDishesList.vue  CreateOrder.vue  Dish.vue  DishPrice.vue  EditUser.vue  HelloWorld.vue  ListBasketDishes.vue  ListDishes.vue  Markdown.vue
frontend/src/router/: index.js
frontend/src/store/: basket.js  dishes.js  index.js  user.js
frontend/src/views/: Basket.vue  Dish.vue  Dishes.vue  Home.vue
rollandbar/order/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
rollandbar/order/migrations/: 0001_initial.py  0002_auto_20200407_0613.py  0003_auto_20210313_0120.py
rollandbar/order/templates/core/: index.html
rollandbar/rollandbar/: asgi.py  settings.py  urls.py  wsgi.py
